--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
  <section id="home" class="parallax" style="background-image: url('images/hero-images.jpeg');">
     <div class="overlay"></div>
     <div class="main-content">
-      <!-- content -->
+        <div class="content-center">
+            <h1>TAHAD PRODUCTION</h1>
+            <p>Where Your Event Matters</p>
+        </div>
     </div>
-  </section>
+</section>
   
   <section id="about" class="section">
     <div class="section-content">
@@ -147,7 +150,7 @@
         <h3>CUSTOMER SERVICE</h3>
         <ul>
           <li><a href="pages/faq.html">FAQs</a></li>
-          <li><a href="pages/shipping.html">Shipping & Deliveries</a></li>
+          <li><a href="pages/service.html">Service & Cancellation</a></li>
           <li><a href="pages/policies.html">Our Policies</a></li>
           <li><a href="pages/tnc.html">Term & Conditions</a></li>
         </ul>
