--- a/pages/service.html
+++ b/pages/service.html
@@ -44,9 +44,9 @@ At Tahad Production (JM1000247-W), we are committed to providing exceptional eve
 <b>Refund Policy</b><br><br>
 We understand that circumstances may arise that require the cancellation or modification of your event. In such cases, Tahad Production offers a flexible refund policy based on the following guidelines:<br><br>
 <ul>
-<li>Full Refund: If the cancellation request is made at least [XX] days prior to the scheduled event date, we will provide a full refund of any payments made.</li>
-<li>Partial Refund: If the cancellation request is made within [XX] days of the scheduled event date, a partial refund may be provided, taking into consideration any expenses or commitments already incurred by Tahad Production.</li>
-<li>No Refund: Cancellation requests received less than [XX] days before the scheduled event date may not be eligible for a refund, as significant resources and planning efforts may have already been allocated.</li>
+<li><b>Full Refund:</b> If the cancellation request is made at least [XX] days prior to the scheduled event date, we will provide a full refund of any payments made.</li><br><br>
+<li><b>Partial Refund:</b> If the cancellation request is made within [XX] days of the scheduled event date, a partial refund may be provided, taking into consideration any expenses or commitments already incurred by Tahad Production.</li><br><br>
+<li><b>No Refund:</b> Cancellation requests received less than [XX] days before the scheduled event date may not be eligible for a refund, as significant resources and planning efforts may have already been allocated.</li>
 </ul><br><br>
 Please note that any refunds are subject to review and approval by Tahad Production, and additional terms and conditions may apply based on the specific circumstances of each event.<br><br>
 
@@ -86,7 +86,7 @@ It's important to review and understand our refund and cancellation policies bef
         <h3>CUSTOMER SERVICE</h3>
         <ul>
           <li><a href="faq.html">FAQs</a></li>
-          <li><a href="shipping.html">Shipping & Deliveries</a></li>
+          <li><a href="service.html">Service & Cancellation</a></li>
           <li><a href="policies.html">Our Policies</a></li>
           <li><a href="tnc.html">Term & Conditions</a></li>
         </ul>
