--- a/pages/tnc.html
+++ b/pages/tnc.html
@@ -109,7 +109,7 @@ By using our website or services, you acknowledge that you have read, understood
         <h3>CUSTOMER SERVICE</h3>
         <ul>
           <li><a href="faq.html">FAQs</a></li>
-          <li><a href="shipping.html">Shipping & Deliveries</a></li>
+          <li><a href="service.html">Service & Cancellation</a></li>
           <li><a href="policies.html">Our Policies</a></li>
           <li><a href="tnc.html">Term & Conditions</a></li>
         </ul>
