--- a/pages/faq.html
+++ b/pages/faq.html
@@ -124,7 +124,7 @@
         <h3>CUSTOMER SERVICE</h3>
         <ul>
           <li><a href="faq.html">FAQs</a></li>
-          <li><a href="shipping.html">Shipping & Deliveries</a></li>
+          <li><a href="service.html">Service & Cancellation</a></li>
           <li><a href="policies.html">Our Policies</a></li>
           <li><a href="tnc.html">Term & Conditions</a></li>
         </ul>
