--- a/pages/why.html
+++ b/pages/why.html
@@ -95,7 +95,7 @@ If you have any questions or concerns about our Privacy Policy or the handling o
         <h3>CUSTOMER SERVICE</h3>
         <ul>
           <li><a href="faq.html">FAQs</a></li>
-          <li><a href="shipping.html">Shipping & Deliveries</a></li>
+          <li><a href="service.html">Service & Cancellation</a></li>
           <li><a href="policies.html">Our Policies</a></li>
           <li><a href="tnc.html">Term & Conditions</a></li>
         </ul>
