--- a/pages/service.html
+++ b/pages/service.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Cache-Control" content="max-age=3600, public, stale-while-revalidate=604800">
   <title>TAHAD - Service, Cancellation & Refund Policies</title>
   <meta name="description" content="Explore Tahad Production's tailored event management services, flexible refund options, and cancellation process.">
-  <link rel="canonical" href="https://tahad.github.io/pages/testimonies" />
+  <link rel="canonical" href="https://tahad.github.io/pages/service" />
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
