--- a/pages/policies.html
+++ b/pages/policies.html
@@ -122,6 +122,7 @@ If you have any questions or concerns about our Privacy Policy or the handling o
 	 <script src="../js/extensionRemover.js" defer></script>
    <script src="../js/script.js" defer></script>
 	 <script src="../js/disselct.js" defer></script>
+   <script src="../js/totop.js" defer></script>
    <script src="../js/subs.js" defer></script>
 
     <!-- Google tag (gtag.js) -->
