--- a/pages/service.html
+++ b/pages/service.html
@@ -112,6 +112,7 @@ It's important to review and understand our refund and cancellation policies bef
 	 <script src="../js/extensionRemover.js" defer></script>
    <script src="../js/script.js" defer></script>
 	 <script src="../js/disselct.js" defer></script>
+   <script src="../js/totop.js" defer></script>
       <script src="../js/subs.js" defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
