--- a/pages/testimonies.html
+++ b/pages/testimonies.html
@@ -165,6 +165,7 @@
 	    <script src="../js/extensionRemover.js" defer></script>
         <script src="../js/script.js" defer></script>
         <script src="../js/subs.js" defer></script>
+        <script src="../js/totop.js" defer></script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
         <script>
