--- a/pages/faq.html
+++ b/pages/faq.html
@@ -150,6 +150,7 @@
   <script src="../js/extensionRemover.js" defer></script>
   <script src="../js/script.js" defer></script>
   <script src="../js/accordian.js" defer></script>
+  <script src="../js/totop.js" defer></script>
   <script src="../js/subs.js" defer></script>
   <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
