--- a/pages/tnc.html
+++ b/pages/tnc.html
@@ -135,6 +135,7 @@ By using our website or services, you acknowledge that you have read, understood
 	   <script src="../js/extensionRemover.js" defer></script>
      <script src="../js/script.js" defer></script>
 	   <script src="../js/disselct.js" defer></script>
+     <script src="../js/totop.js" defer></script>
      <script src="../js/subs.js" defer></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP47NM0ZEJ"></script>
